--- a/manuscript/01_main.Rmd
+++ b/manuscript/01_main.Rmd
@@ -97,16 +97,14 @@ For continuous or ordinal variables, both linear and polynomial terms were teste
 
 # Results
 
-A total of `r sum_stat$DET.TOT.RAW %>% good_num()` detections of `r sum_stat$UNIQUE.SPEC.RAW %>% good_num()` bird species were made, of which `r round(100*(sum_stat$DET.TOT.RAW - sum_stat$DET.TOT.FILT)/sum_stat$DET.TOT.RAW)`% (`r (sum_stat$DET.TOT.RAW - sum_stat$DET.TOT.FILT) %>% good_num()`) did not meet the criteria for inclusion in the analysis. Of the `r sum_stat$DET.TOT.FILT %>% good_num()` detections of `r sum_stat$UNIQUE.SPEC.FILT %>% good_num()` species analysed, `r round(sum_stat$DET.AUD.FILT.PC)`% (`r sum_stat$DET.AUD.FILT %>% good_num()`) were purely auditory, 
+We detected a total of `r sum_stat$DET.TOT.RAW %>% good_num()` birds of `r sum_stat$UNIQUE.SPEC.RAW %>% good_num()` species, of which `r round(100*(sum_stat$DET.TOT.RAW - sum_stat$DET.TOT.FILT)/sum_stat$DET.TOT.RAW)`% (`r (sum_stat$DET.TOT.RAW - sum_stat$DET.TOT.FILT) %>% good_num()`) did not meet the criteria for inclusion in the analysis. Of the `r sum_stat$DET.TOT.FILT %>% good_num()` detections of `r sum_stat$UNIQUE.SPEC.FILT %>% good_num()` species analysed, `r round(sum_stat$DET.AUD.FILT.PC)`% (`r sum_stat$DET.AUD.FILT %>% good_num()`) were purely auditory, 
 `r round(sum_stat$DET.VIS.FILT.PC)`% (`r sum_stat$DET.VIS.FILT %>% good_num()`) were purely visual and `r round(sum_stat$DET.BOTH.FILT.PC)`% (`r sum_stat$DET.BOTH.FILT %>% good_num()`) were both, and this did not change majorly with weeks or across points *(Figure S3)*. The average number of detections per point count varied from `r sum_stat$DET.AVG.W01` in Week 1 to `r sum_stat$DET.AVG.W13` in Week 13 *(Figure 2)*. Among `r sum_stat$FORAGING.FILT %>% good_num()` records of birds foraging, just `r sum_stat$FORAGING.FILT.FRUIT %>% good_num()` were of frugivory.
 
-At the community level, bird abundance was affected by observer, week, canopy heterogeneity, tree density, and dominant ground vegetation and its interaction with week. In spite of the significant correlations between canopy heterogeneity and canopy cover (`r show_cor(habvar$CC, habvar$CH, "pearson")`), and between canopy cover and tree density (`r show_cor(habvar$CC, habvar$TDens, "pearson")`), canopy heterogeneity and tree density remained uncorrelated (`r show_cor(habvar$CH, habvar$TDens, "pearson")`). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (`r show_cor(habvar$TPD, habvar$TDens, "pearson")`), but seemed to be the more important predictor in the models.
+Community-level bird abundance was affected by observer, week and dominant ground vegetation, as well as canopy heterogeneity, tree density, and their interaction. In spite of the significant correlations between canopy heterogeneity and canopy cover (`r show_cor(habvar$CC, habvar$CH, "pearson")`), and between canopy cover and tree density (`r show_cor(habvar$CC, habvar$TDens, "pearson")`), canopy heterogeneity and tree density remained uncorrelated (`r show_cor(habvar$CH, habvar$TDens, "pearson")`). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (`r show_cor(habvar$TPD, habvar$TDens, "pearson")`), but seemed to be the more important predictor in the models. *(Fig of correlations)*
 
-There was an overall increase in bird abundance towards the end of the study period in all sampling points---across the five categories of ground vegetation---but the magnitude of increase was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation had intermediate values of both average abundance and increase in abundance with time. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase *(Figure 3)*. Points with ground layers comprising moss and bare ground both had low abundances in the beginning but towards the end had the highest abundances, i.e., they showed the strongest increases. Bird abundance related positively and negatively with log-transformed variables of canopy heterogeneity and tree density respectively *(Figure 3)* and these trends did not change noticeably over the course of the study period.
+Bird abundance was lowest in sampling points with graminoids as dominant ground vegetation, intermediate in those with *Rubus* sp., and similarly high across points with the other three categories (*Vaccinium* sp., moss, bare ground; *Figure 3)*. The overall abundance of the bird community increased over the course of the study period across all sampling points *(Figure 3)*. At medium to high levels of tree density, bird abundance increased with increasing canopy heterogeneity. At relatively low levels of canopy heterogeneity, abundance decreased with increasing tree density. The relationship between these three variables did not change noticeably over the season, but broke down at low levels of tree density and medium to high levels of canopy heterogeneity *(Figure 3)*. 
 
-Within the bird community, habitat selection was very different between invertivores and omnivores *(Table 3)*. Invertivore abundance was affected by observer, proportion of deciduous trees and dominant ground vegetation. Abundance was lower in sampling points with 'Graminoid' ground vegetation than points with other ground layers *(Figure 4)*. Abundance also decreased with deciduous proportion and, notably, since a polynomial term did not give a better fit, there is no evidence for the notion of mixed forests with intermediate deciduous proportions having higher diversity and abundance. Neither of the two trends changed detectably with time.
-
-On the other hand, omnivore abundance was affected by observer, habitat class, tree density, and canopy heterogeneity, and it changed with time. Abundance of omnivores generally increased as the season progressed, and decreased with increasing tree density, but overall was higher in forest edges than in forest interiors or roadside patches (Figure 5). With canopy heterogeneity, the initial trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong. In other words, omnivores were initially indifferent to canopy heterogeneity, and as the season progressed their abundance did not change in relatively homogenous points, but greatly increased in highly heterogenous points (Figure 5).
+Within the bird community, habitat selection was very different between invertivores and omnivores *(Table 3)*. Invertivore abundance was much lower in sampling points with graminoid ground vegetation *(Figure 4)* throughout the study period, but regardless of the dominant ground vegetation, points having moss in the ground layer witnessed an increase in invertivore abundance as the season progressed. On the other hand, omnivore abundance slightly decreased with increasing tree density, and was lower in interior forest patches as compared with roadside and edge patches *(Figure 5)*. While there was an overall increase in abundance as the season progressed, the increase was negligible in patches with low canopy heterogeneity and stark in those with high canopy heterogeneity *(Figure 5)*. 
 
 # Discussion
 
@@ -114,13 +112,19 @@ The overall abundance of the forest bird community after the breeding season see
 
 ## Post-breeding birds track structural characteristics over species diversity
 
+negbin omn, so could allude to flocking
+
 ## Canopy heterogeneity as part of habitat heterogeneity
+
+In other words, omnivores were initially indifferent to canopy heterogeneity, and as the season progressed their abundance did not change in relatively homogenous points, but greatly increased in highly heterogenous points (Figure 5).
 
 Heterogeneity has been explored before in habitat selection studies, but the focus has mostly been on heterogeneity in habitat and not in the canopy. For example, @freemark1986 observed positive trends of bird richness and abundance with overall habitat heterogeneity (combination of species compositions and forest structure) and forest size, which are expected to correlate. Canopy heterogeneity however, along with canopy cover, affect light availability within the forest, which would result in higher foraging efficiency and thus can be crucial in foraging for invertebrates in autumn when the conspicuous prey are depleted. Heterogeneity could also explain higher omnivore abundance in forest edges. In our study across multiple points of the same area within the same forest tract, the relation between omnivore abundance and canopy heterogeneity evolved with time, suggesting that these preferences are driven directly or indirectly by seasonally changing conditions such as increasing foraging pressure. Canopy cover was not included as a predictor and hence its effect cannot be compared, but heterogeneity might potentially be more important to birds than average cover, as heterogeneous patches provide better light conditions whilst retaining some other desirable properties of the habitat. Patches with low cover, despite having good light conditions, might not have sufficiently good vegetation characteristics. This could be indicating two separable properties of the canopy that go unnoticed in habitat selection studies.
 
 Despite the absence of a significant correlation between canopy heterogeneity and tree density, the latter was negatively related to bird abundance (at the whole community level as well as in omnivores but not insectivores). Since a vast majority of bird detections were auditory and since auditory detections are not limited by such temperate forests with poor understorey layers, the possibility of poorer detection rates with higher tree density can be ruled out, though it is unknown whether tree density also affects overall bird behaviour. In omnivores, the structural preference rather than biological preference (like deciduous/coniferous) suggests that being generalists, they are not particular about the nature of their food source. At the same time, the correlation between canopy cover and tree density, despite being statistically significant, is weak at low densities, suggesting that the preference of birds for low density patches might be driven by some factor other than light availability. For instance, @menon2021 found that tree density across various sites in a low-latitude temperate forest, comprising both protected and managed patches, was highly negatively associated with mean tree girth, and observations suggested a negative relationship with canopy height as well. While these could be due to suppressed regeneration and sapling growth, and therefore indirectly due to light availability (shade effects), both variables were positively linked with bird abundance and richness [@menon2021]. Wider and taller trees are expected to host a larger and more diverse group of arthropod prey species as a result of greater diversity of microhabitats. @wolfe2014 suggested that because forest-dwelling arthropod species are often cryptic [@bond2007], it may be inherently difficult and inefficient for an insectivore to directly assess the availability of arthropods, particularly in resource-scarce periods. They suggested this to be the reason why insectivores, unlike frugivores, tracked structural cues, including but not limited to tree density, canopy closure and percentage ground cover. However, our 'invertebrate-feeding' species are naturally specialised on cryptic prey species. This could be why they tracked the qualitative features of the food resources (indirectly by the deciduous/coniferous distinction) over structural characteristics. On the other hand, the generalist omnivores (which still relied to an extent on arthropods due to the low diversity of fruiting plants) would have had difficulty foraging for these cryptic species, and hence attained higher foraging efficiency by tracking structural characteristics, especially with the formation of foraging flocks.
 
 ## The surprising role of oak in post-breeding season
+
+TPD there is no evidence for the notion of mixed forests with intermediate deciduous proportions having higher diversity and abundance
 
 Birds generally show a hump-shaped trend with proportion of deciduous trees, with highest numbers found in mixed forests and lowest in both purely coniferous and purely broadleaved patches [e.g., @alatalo1981; @jansson2003; @hagar2007; @ohno1997; @felton2010]. However, in alignment with Alatalo's findings [-@alatalo1981] that relative use of such deciduous patches were strong in summer but declined in winter, omnivores in our study in the summer-winter transition showed neither a linear nor a polynomial relationship with proportion of deciduous trees, while invertivore abundance declined with deciduous proportion. Oaks are usually linked with higher biodiversity (especially *Q. robur*, which is highly insect-rich and has the highest visitation rates by birds), but oak-rich points in our study were poorest for birds in both periods. It is to be noted that a majority of the herbivorous arthropods on oaks belong to Lepidoptera [45% of the total species richness of phytophages on *Q. robur/petraea*\; @kennedy1984], which attain a peak density in spring. The trees see relatively very low lepidopteran attacks after mid-June [@feeny1970]. When considering all phytophagous insects, there is a second but much smaller peak in abundance in late summer and early autumn of suckers, leaf-miners and gall-formers [@southwood2004]. Thus, the overwhelming preference for oaks by arthropods, and consequently by predatory birds, is likely to be prevalent mainly in spring and summer. The arthropod communities of oaks and their regulation by predators has rarely been explored in the post-breeding periods of late summer and early autumn. Moreover, the specific invertivore species present during this summer-autumn transition period such as treecreepers, robin and goldcrest/firecrest are largely specialists and do not prey on external-feeding herbivores. Treecreepers are bark-feeders, robin is mostly a ground-forager and goldcrest is specialised for spruce [firecrest shows no preference for either conifers or broadleaf trees\; @leisler1982].
 
